# console-log-rs

./: Cargo.toml  LICENSE  README.md
examples/: log.rs
src/: lib.rs
